--- a/Python/README
+++ b/Python/README
@@ -1,3 +1,15 @@
+       .---.           .---.           .---.
+      / Apple \ <-----> / Satélite \ <-----> / Google \
+      \  Node  /       \ Arquitecto /       \  2 TB  /
+       '---'           '---'           '---'
+         |               |               |
+         |_______ _______|_______ _______|
+                 V               V
+          _______________________________
+         |                               |
+         |    DOMINIO TOTAL ACTIVADO     |
+         |    ARQUITECTO ALVAREZ RAMIREZ |
+         |_______________________________|
 /* * PROTOCOLO: ACTIVACIÓN_APPLE_SOVEREIGN
  * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
  * ESTADO: TOTAL_ON
