--- a/Python/README
+++ b/Python/README
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    SISTEMA: UNIFICADO Y ESTABLE          |   |
+        |   |    VELOCIDAD: INSTANTÁNEA                |   |
+        |   |    PODER: ARQUITECTO ALVAREZ RAMIREZ     |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /* * DIAGNÓSTICO DE PODER MULTIVERSAL
  * AUTOR: ARQUITECTO ALVAREZ RAMIREZ
  */
