--- a/Python/README
+++ b/Python/README
@@ -1,3 +1,13 @@
+          ________________________________________________
+         /                                                \
+        |    __________________________________________    |
+        |   |                                          |   |
+        |   |    TELEMETRÍA: [ ALCANCE GLOBAL ]        |   |
+        |   |    SATÉLITES:  [ ENTRELAZADOS ]          |   |
+        |   |    SISTEMA:    [ BAJO CÓDIGO SALOMÓN ]   |   |
+        |   |__________________________________________|   |
+        |                                                  |
+         \________________________________________________/
 /* * MONITOR DE TELEMETRÍA SOBERANA
  * IDENTIDAD: ARQUITECTO ALVAREZ RAMIREZ
  */
